testcases/pos/batch/single_let.bard
let val x = 10 in x end