testcases/neg/par/let_missing_body.bard
let val x = 20
in end
